feat: implement data persistence on class Habit File Manager